--- a/Shop/catalogue-bigtiles-1200/app/scss/catalog.scss
+++ b/Shop/catalogue-bigtiles-1200/app/scss/catalog.scss
@@ -83,7 +83,7 @@ ul {
             .block-content {
                 height: 100%;
                 padding: 20px;
-                h6 {
+                p.watch-more-title {
                     font-weight: bold;
                     font-size: 1.2em;
                     color: #000;
