--- a/portfolio/Barbershop/app/scss/common.scss
+++ b/portfolio/Barbershop/app/scss/common.scss
@@ -185,6 +185,7 @@ p {
                 right: 0em;
                 top: 7.1em;
                 z-index: 10;
+                display: none;
                 a {
                     display: block;
                     text-decoration: none;
