--- a/portfolio/Barbershop/app/css/projects.css
+++ b/portfolio/Barbershop/app/css/projects.css
@@ -159,7 +159,7 @@
               -ms-flex-pack: justify;
                   justify-content: space-between; }
           #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block {
-            margin: 2em 5em; }
+            margin: 2em 2em; }
             #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block img {
               display: block;
               margin: 0 auto;
@@ -173,16 +173,10 @@
               color: #afafaf;
               padding-top: 0.7em;
               text-align: center;
-              word-spacing: 0.2em;
+              letter-spacing: 0.07em;
               cursor: pointer; }
             #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block:hover img {
               opacity: 1; }
-          #projects .container .home_page_projects .page_content .bottom_projects .projects_content .colored .after {
-            display: none; }
-          #projects .container .home_page_projects .page_content .bottom_projects .projects_content .colored_hover .before {
-            display: none; }
-          #projects .container .home_page_projects .page_content .bottom_projects .projects_content .colored_hover .after {
-            display: block; }
           #projects .container .home_page_projects .page_content .bottom_projects .projects_content .active img {
             opacity: 1; }
           #projects .container .home_page_projects .page_content .bottom_projects .projects_content .active p {
