--- a/portfolio/Barbershop/app/scss/projects.scss
+++ b/portfolio/Barbershop/app/scss/projects.scss
@@ -122,7 +122,7 @@
                         flex-flow: row wrap;
                         justify-content: space-between;
                         .block {
-                            margin: 2em 5em;
+                            margin: 2em 2em;
                             img {
                                 display: block;
                                 margin: 0 auto;
@@ -137,7 +137,7 @@
                                 color: #afafaf;
                                 padding-top: 0.7em;
                                 text-align: center;
-                                word-spacing: 0.2em;
+                                letter-spacing: 0.07em;
                                 cursor: pointer;
                             }
                              &:hover {
@@ -146,19 +146,7 @@
                             }
                         }
                         }
-                        .colored {
-                            .after {
-                                display: none;
-                            }
-                        }
-                        .colored_hover {
-                                .before {
-                                    display: none;
-                                }
-                                .after {
-                                    display: block;
-                                }
-                        }
+                        
                         .active {
                             img {
                                 opacity: 1;
