--- a/Shop/catalogue-page/app/css/catalog.css
+++ b/Shop/catalogue-page/app/css/catalog.css
@@ -165,10 +165,9 @@ ul {
   -o-transition: box-shadow .3s;
   transition: box-shadow .3s;
   transition: box-shadow .3s, -webkit-box-shadow .3s; }
-  .catalog .catalog-page .catalog-cards .card_content:hover {
-    -webkit-box-shadow: 8px 13px 30px rgba(0, 0, 0, 0.2);
-            box-shadow: 8px 13px 30px rgba(0, 0, 0, 0.2); }
-  .catalog .catalog-page .catalog-cards .card_content .top_section, .catalog .catalog-page .catalog-cards .card_content .description_section, .catalog .catalog-page .catalog-cards .card_content .bottom_section {
+  .catalog .catalog-page .catalog-cards .card_content .top_section,
+  .catalog .catalog-page .catalog-cards .card_content .description_section,
+  .catalog .catalog-page .catalog-cards .card_content .bottom_section {
     position: relative;
     border: 1px solid #e5e5e5;
     padding: 15px; }
@@ -190,7 +189,8 @@ ul {
       position: absolute;
       top: 10px;
       right: 10px; }
-      .catalog .catalog-page .catalog-cards .card_content .img_block .discount_block .discount-item, .catalog .catalog-page .catalog-cards .card_content .img_block .discount_block .novelty-item {
+      .catalog .catalog-page .catalog-cards .card_content .img_block .discount_block .discount-item,
+      .catalog .catalog-page .catalog-cards .card_content .img_block .discount_block .novelty-item {
         display: block;
         height: 30px;
         width: 60px;
@@ -271,7 +271,10 @@ ul {
         width: 48%;
         text-align: center;
         padding-top: 5px;
-        color: #818181; }
+        color: #818181;
+        -webkit-transition: .3s ease;
+        -o-transition: .3s ease;
+        transition: .3s ease; }
         .catalog .catalog-page .catalog-cards .card_content .description_section .links_block a i {
           color: #cccccc; }
   .catalog .catalog-page .catalog-cards .card_content .bottom_section {
@@ -309,7 +312,8 @@ ul {
           padding-right: 0.3em; }
       .catalog .catalog-page .catalog-cards .card_content .bottom_section .left_item .old_price {
         font-size: 1.2em;
-        text-decoration: line-through; }
+        text-decoration: line-through;
+        margin-bottom: -2px; }
         .catalog .catalog-page .catalog-cards .card_content .bottom_section .left_item .old_price .price {
           padding-right: 0.3em; }
     .catalog .catalog-page .catalog-cards .card_content .bottom_section .right_item {
@@ -321,4 +325,88 @@ ul {
         border: none;
         background: #ffcc33;
         -webkit-border-radius: 4px;
-                border-radius: 4px; }
+                border-radius: 4px;
+        -webkit-transition: .3s;
+        -o-transition: .3s;
+        transition: .3s; }
+
+.catalog .catalog-page .more_cards_btn {
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  background-color: #78a1b3;
+  -webkit-border-radius: 1px solid #95b5c3;
+          border-radius: 1px solid #95b5c3;
+  height: 40px;
+  margin: 10px 0;
+  -webkit-border-radius: 3px;
+          border-radius: 3px;
+  color: #fff;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s; }
+
+.catalog .catalog-page .paginator {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin-top: 20px; }
+  .catalog .catalog-page .paginator .paginator_link_page {
+    height: 48px;
+    width: 9%; }
+    .catalog .catalog-page .paginator .paginator_link_page a {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      height: 100%;
+      border: 1px solid #e5e5e5;
+      -webkit-transition: .3s;
+      -o-transition: .3s;
+      transition: .3s;
+      margin-right: -1px;
+      position: relative;
+      z-index: 1;
+      background-color: #ffffff; }
+  .catalog .catalog-page .paginator .prev,
+  .catalog .catalog-page .paginator .next {
+    width: 18.5%; }
+  .catalog .catalog-page .paginator .active_pag_page a {
+    background: #f7f7f7;
+    font-weight: bolder; }
+
+.with_box {
+  margin-top: 45px; }
+  .with_box .box_title {
+    margin-bottom: 25px; }
+
+@media screen and (min-width: 1025px) {
+  .catalog .catalog-page .catalog-cards .card_content .bottom_section .right_item button:hover {
+    background-color: #ffdd7d; }
+  .catalog .catalog-page .catalog-cards .card_content .description_section .links_block a:hover,
+  .catalog .catalog-page .paginator .paginator_link_page a:hover {
+    color: #1d1d1d;
+    border-color: #999999;
+    z-index: 2; }
+    .catalog .catalog-page .catalog-cards .card_content .description_section .links_block a:hover i,
+    .catalog .catalog-page .paginator .paginator_link_page a:hover i {
+      color: #626262; }
+  .catalog .catalog-page .catalog-cards .card_content .description_section .title_link:hover {
+    color: #197ac4;
+    text-decoration: underline; }
+  .catalog .catalog-page .catalog-cards .card_content:hover {
+    -webkit-box-shadow: 8px 13px 30px rgba(0, 0, 0, 0.2);
+            box-shadow: 8px 13px 30px rgba(0, 0, 0, 0.2); }
+  .catalog .catalog-page .more_cards_btn:hover {
+    background-color: #7eb8d2;
+    border-color: #7eb8d2; } }
